hugetlb: do not account hugetlb pages as NR_FILE_PAGES (bnc#930092).

--- a/series.conf
+++ b/series.conf
@@ -1717,6 +1717,8 @@
 	patches.suse/mm-hugetlb-use-vma_resv_map-map-types.patch
 	patches.suse/mm-hugetlb-improve-page-fault-scalability.patch
 
+	patches.fixes/hugetlb-do-not-account-hugetlb-pages-as-nr_file_pages.patch
+
 	# bnc#876590
 	patches.fixes/Fix-memory-allocator-deadlock.patch
 
