--- a/series.conf
+++ b/series.conf
@@ -18300,6 +18300,7 @@
 	patches.drivers/0040-be2iscsi-Fix-MSI-X-Interrupt-Names.patch
 	patches.fixes/iscsi_boot_sysfs-have-this-module-check-for-null-on.patch
 	patches.fixes/iscsi_ibft-be2iscsi-iscsi_boot-fix-boot-kobj-data.patch
+	patches.drivers/iscsi_ibft-fix-finding-broadcom-specific-ibft-sign
 
 	patches.drivers/be2iscsi-Fix-for-wrong-dmsg-setting-in-wrb.patch
 	patches.drivers/be2iscsi-Fix-for-case-where-task-sc-was-cleanedup.patch
