st: fix corruption of the st_modedef structures in st_set_options() (bnc#928333).

--- a/series.conf
+++ b/series.conf
@@ -6146,6 +6146,7 @@
 	patches.fixes/st-remove-st_mutex.patch
 	patches.fixes/st-add-st-nowait-eof-param-to-module
 	patches.fixes/st-take-additional-queue-ref-in-st_probe.patch
+	patches.fixes/st-fix-corruption-of-the-st_modedef-structures.patch
 
 	patches.drivers/sg-remove-sg_mutex.patch
 
