crypto: s390 - fix incorrect ghash icv buffer handling (bnc#932055, LTC#125410).

--- a/series.conf
+++ b/series.conf
@@ -1295,6 +1295,8 @@
 	patches.arch/s390-sles11sp4-z13base-16-sske-mbc.patch
 	patches.arch/s390-sles11sp4-z13base-17-stack-rnd-compat-z13.patch
 
+	patches.arch/s390-sles11sp4-04-01-crypto-ghash-concurrency-fix.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
