x86/mce: Fix mce regression from recent cleanup (bsc#914987).

--- a/series.conf
+++ b/series.conf
@@ -16652,6 +16652,7 @@
 
 	# bsc#914987 - SRAR error injection
 	patches.arch/01-x86-mce-update-mce-severity-condition-check.patch
+	patches.arch/02-x86-mce-fix-mce-regression-from-recent-cleanup.patch
 
 	# Check the EFI variable and the space usage more stringent.
 	# bnc#806499 and fixing some Samsung machines
