--- a/series.conf
+++ b/series.conf
@@ -3786,6 +3786,8 @@
 	patches.suse/btrfs-8323-fix-scheduler-warning-when-syncing-log.patch
 	patches.suse/btrfs-8324-abort-the-transaction-if-we-fail-to-update-the.patch
 	patches.suse/btrfs-8325-fix-lost-return-value-due-to-variable-shadowin.patch
+	# 4.1
+	patches.suse/btrfs-8339-btrfs_release_extent_buffer_page-didn-t-free-p.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
