Btrfs: fix race when reusing stale extent buffers that leads to BUG_ON.

--- a/series.conf
+++ b/series.conf
@@ -3788,6 +3788,7 @@
 	patches.suse/btrfs-8325-fix-lost-return-value-due-to-variable-shadowin.patch
 	# 4.1
 	patches.suse/btrfs-8339-btrfs_release_extent_buffer_page-didn-t-free-p.patch
+	patches.suse/btrfs-8340-fix-race-when-reusing-stale-extent-buffers-tha.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
