--- a/series.conf
+++ b/series.conf
@@ -14237,6 +14237,7 @@
 	patches.drivers/be2net-0233-be2net-avoid-flashing-SH-B0-UFI-image-on-SH-P2-chip.patch
 	patches.drivers/be2net-use-PCI-MMIO-read-instead-of-config-read-for-.patch
 	patches.drivers/be2net-0001-be2net-move-interface-create-code-to-a-separate-rout.patch
+	patches.drivers/be2net-0002-be2net-avoid-creating-the-non-RSS-default-RXQ-if-FW-.patch
 
 	# qlge SP4 update (bsc#909361 FATE#317547)
 	patches.drivers/qlge-0001-qlge-fix-an-vs-bug.patch
