be2net: implement .sriov_configure() PCI callback (bug#908322 FATE#317535).

--- a/series.conf
+++ b/series.conf
@@ -14239,6 +14239,7 @@
 	patches.drivers/be2net-0001-be2net-move-interface-create-code-to-a-separate-rout.patch
 	patches.drivers/be2net-0002-be2net-avoid-creating-the-non-RSS-default-RXQ-if-FW-.patch
 	patches.drivers/be2net-0003-be2net-re-distribute-SRIOV-resources-allowed-by-FW.patch
+	patches.drivers/be2net-0004-be2net-implement-.sriov_configure-PCI-callback.patch
 
 	# qlge SP4 update (bsc#909361 FATE#317547)
 	patches.drivers/qlge-0001-qlge-fix-an-vs-bug.patch
