--- a/series.conf
+++ b/series.conf
@@ -14236,6 +14236,7 @@
 	patches.drivers/be2net-0232-be2net-refactor-code-that-checks-flash-file-compatib.patch
 	patches.drivers/be2net-0233-be2net-avoid-flashing-SH-B0-UFI-image-on-SH-P2-chip.patch
 	patches.drivers/be2net-use-PCI-MMIO-read-instead-of-config-read-for-.patch
+	patches.drivers/be2net-0001-be2net-move-interface-create-code-to-a-separate-rout.patch
 
 	# qlge SP4 update (bsc#909361 FATE#317547)
 	patches.drivers/qlge-0001-qlge-fix-an-vs-bug.patch
