rtlwifi: rtl8192cu: Fix kernel deadlock (bnc#927786).

--- a/series.conf
+++ b/series.conf
@@ -12821,6 +12821,8 @@
 	patches.fixes/0018-rt2x00-Add-RT5392-chipset-support.patch
 	patches.drivers/ath9k_htc-properly-set-MAC-address-and-BSSID-mask
 
+	patches.fixes/rtlwifi-rtl8192cu-Fix-kernel-deadlock
+
 	########################################################
 	# ISDN
 	########################################################
