IB/iser: Move informational messages from error to info level (bsc#920907).

--- a/series.conf
+++ b/series.conf
@@ -22496,6 +22496,9 @@
 	patches.drivers/0096-be2iscsi-Bump-the-driver-version.patch
 	patches.drivers/0097-be2iscsi-check-ip-buffer-before-copying.patch
 
+	# ib/iser update (bsc#920907)
+	patches.drivers/ib-iser-move-informational-messages-from-error-to-info-level
+
 	# bnc#794648
 	patches.arch/0001-x86-cacheinfo-Determine-number-of-cache-leafs-using-.patch
 	patches.arch/0002-x86-cacheinfo-Make-use-of-CPUID-0x8000001d-for-cache.patch
