--- a/series.conf
+++ b/series.conf
@@ -22499,6 +22499,7 @@
 	# ib/iser update (bsc#920907)
 	patches.drivers/ib-iser-move-informational-messages-from-error-to-info-level
 	patches.drivers/scsi_transport_iscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
+	patches.drivers/libiscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
 
 	# bnc#794648
 	patches.arch/0001-x86-cacheinfo-Determine-number-of-cache-leafs-using-.patch
