IB/iser: Enable iser when FMRs are not supported (bnc#930274).

--- a/series.conf
+++ b/series.conf
@@ -22502,6 +22502,9 @@
 	patches.drivers/libiscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
 	patches.drivers/ib-iser-add-discovery-support
 
+	# bnc#930274
++jjolly	patches.drivers/0001-ib-iser-enable-iser-when-fmrs-are-not-supported.patch
+
 	# bnc#794648
 	patches.arch/0001-x86-cacheinfo-Determine-number-of-cache-leafs-using-.patch
 	patches.arch/0002-x86-cacheinfo-Make-use-of-CPUID-0x8000001d-for-cache.patch
