--- a/series.conf
+++ b/series.conf
@@ -15331,7 +15331,7 @@
 	patches.fixes/audit-make-use-of-remaining-sleep-time-from-wait_for_auditd.patch
 	patches.fixes/audit-efficiency-fix-1-only-wake-up-if-queue-shorter-than-backlog-limit.patch
 	patches.fixes/audit-efficiency-fix-2-request-exclusive-wait-since-all-need-same-resource.patch
-
+	patches.fixes/audit-keep-inode-pinned.patch
 
 
 	########################################################
