ipr: Increase default adapter init stage change timeout (bsc#930761).

--- a/series.conf
+++ b/series.conf
@@ -14710,6 +14710,8 @@
 	patches.fixes/ipr-flag-dump-timeout
 	patches.drivers/ipr-add-bluehawk-IDs
 	patches.fixes/ipr-eeh-recovery-for-64-bit-adapters
+	# bsc#930761
+	patches.fixes/ipr-Increase-default-adapter-init-stage-change-timeout.patch
 
 	# bnc#794550/,fate#314040 
 	patches.drivers/ipr-renaming
