hugetlb, kabi: do not account hugetlb pages as NR_FILE_PAGES (bnc#930092).

--- a/series.conf
+++ b/series.conf
@@ -1718,6 +1718,7 @@
 	patches.suse/mm-hugetlb-improve-page-fault-scalability.patch
 
 	patches.fixes/hugetlb-do-not-account-hugetlb-pages-as-nr_file_pages.patch
+	patches.kabi/hugetlb-do-not-account-hugetlb-pages-as-nr_file_pages-kabi.patch
 
 	# bnc#876590
 	patches.fixes/Fix-memory-allocator-deadlock.patch
