--- a/series.conf
+++ b/series.conf
@@ -15600,6 +15600,7 @@
 	patches.drivers/e1000e-0166-e1000e-initial-support-for-i219.patch
 	patches.drivers/e1000e-0167-e1000e-fix-obscure-comments.patch
 	patches.drivers/e1000e-0168-e1000e-remove-calls-to-ioremap-unmap-for-NVM-addr.patch
+	patches.drivers/e1000e-0169-e1000e-call-netif_carrier_off-early-on-down.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
