--- a/series.conf
+++ b/series.conf
@@ -15611,6 +15611,7 @@
 	patches.drivers/e1000e-0177-e1000e-fix-flush_desc_ring-implementation.patch
 	patches.drivers/e1000e-0178-e1000e-fix-legacy-interrupt-handling-in-i219.patch
 	patches.drivers/e1000e-0179-e1000e-fix-systim-issues.patch
+	patches.drivers/e1000e-0180-e1000e-fix-unit-hang-during-loopback-test.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
