e1000e: Bump the version to 3.2.5 (bug#923242).

--- a/series.conf
+++ b/series.conf
@@ -15612,6 +15612,7 @@
 	patches.drivers/e1000e-0178-e1000e-fix-legacy-interrupt-handling-in-i219.patch
 	patches.drivers/e1000e-0179-e1000e-fix-systim-issues.patch
 	patches.drivers/e1000e-0180-e1000e-fix-unit-hang-during-loopback-test.patch
+	patches.drivers/e1000e-0181-e1000e-Bump-the-version-to-3.2.5.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
