e1000e: fix logical error in flush_desc_rings (bug#923242).

--- a/series.conf
+++ b/series.conf
@@ -15607,6 +15607,7 @@
 	patches.drivers/e1000e-0173-e1000e-i219-fix-unit-hang-on-reset-and-runtime-D3.patch
 	patches.drivers/e1000e-0174-e1000e-i219-execute-unit-hang-fix-on-every-reset-or-.patch
 	patches.drivers/e1000e-0175-e1000e-remove-call-to-do_div-and-sign-mismatch-warni.patch
+	patches.drivers/e1000e-0176-e1000e-fix-logical-error-in-flush_desc_rings.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
