--- a/series.conf
+++ b/series.conf
@@ -15608,6 +15608,7 @@
 	patches.drivers/e1000e-0174-e1000e-i219-execute-unit-hang-fix-on-every-reset-or-.patch
 	patches.drivers/e1000e-0175-e1000e-remove-call-to-do_div-and-sign-mismatch-warni.patch
 	patches.drivers/e1000e-0176-e1000e-fix-logical-error-in-flush_desc_rings.patch
+	patches.drivers/e1000e-0177-e1000e-fix-flush_desc_ring-implementation.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
