--- a/series.conf
+++ b/series.conf
@@ -15605,6 +15605,7 @@
 	patches.drivers/e1000e-0171-e1000e-Cleanup-handling-of-VLAN_HLEN-as-a-part-of-ma.patch
 	patches.drivers/e1000e-0172-e1000e-fix-call-to-do_div-to-use-u64-arg.patch
 	patches.drivers/e1000e-0173-e1000e-i219-fix-unit-hang-on-reset-and-runtime-D3.patch
+	patches.drivers/e1000e-0174-e1000e-i219-execute-unit-hang-fix-on-every-reset-or-.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
