e1000e: fix call to do_div() to use u64 arg (bug#923242).

--- a/series.conf
+++ b/series.conf
@@ -15603,6 +15603,7 @@
 	patches.drivers/e1000e-0169-e1000e-call-netif_carrier_off-early-on-down.patch
 	patches.drivers/e1000e-0170-e1000e-NVM-write-protect-access-removed-from-SPT-HW.patch
 	patches.drivers/e1000e-0171-e1000e-Cleanup-handling-of-VLAN_HLEN-as-a-part-of-ma.patch
+	patches.drivers/e1000e-0172-e1000e-fix-call-to-do_div-to-use-u64-arg.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
