iommu/amd: Handle integer overflow in dma_ops_area_alloc (bsc#931538).

--- a/series.conf
+++ b/series.conf
@@ -17285,6 +17285,8 @@
 
 	# bsc#930669 - qa_test_ltp:syscalls:mmap15 failed only on ppc64 and ia64
 	patches.fixes/powerpc-mm-fix-mmap-errno-when-map_fixed-is-set-and-mapping-exceeds-the-allowed-address-space
+	# bsc#931538 - [HP HPS Bug] SLES11 sp4 beta 4 Bl465 gen 8 -Kernel panic in beiscsi after OS install
+	patches.fixes/iommu-amd-handle-integer-overflow-in-dma_ops_area_alloc
 
 	########################################################
 	# You'd better have a good reason for adding a patch
