Re-arrange scsi/libiscsi kabi fix (bsc#920907)
This commit alters 3 existing patches and adds one new one. The
end result (the code) is the same, except that sections of
scsi code that reference unused sysfs attributes have the
ifdef removing them changed from "#if 0" to
"#ifdef SYSFS_UNUSED_ATTRS".

Changes:
- patches.drivers/ib-iser-add-discovery-support
  - rebased
- patches.drivers/libiscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs, and
  patches.drivers/scsi_transport_iscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
  - removed the "#if 0"s added to remove unused sysfs fields
- patches.suse/scsi-limit-kabi-changes-to-discovery-session
  - new patch created to ifdef out unused sysfs fields, as
    well as put "#ifndef __GENKSYMS__" around kabi-sensitive
    changes

--- a/series.conf
+++ b/series.conf
@@ -22518,6 +22518,7 @@
 	patches.drivers/scsi_transport_iscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
 	patches.drivers/libiscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
 	patches.drivers/ib-iser-add-discovery-support
+	patches.suse/scsi-limit-kabi-changes-to-discovery-session
 
 	# bnc#930274
 +jjolly	patches.drivers/0001-ib-iser-enable-iser-when-fmrs-are-not-supported.patch
