s390/pci: fix possible information leak in mmio syscalls (bnc#932697, LTC#125551).

--- a/series.conf
+++ b/series.conf
@@ -21133,6 +21133,8 @@
 
 	patches.arch/s390-sles11sp4-00-06-kernel-syscalls-for-PCI-memory-access.patch
 
+	patches.arch/s390-sles11sp4-05-01-pci-fix-possible-information-leak-in-mmio-syscalls.patch
+
 	# bnc#851101
 	patches.fixes/kvm-perform-an-invalid-memslot-step-for-gpa-base-change.patch
 	patches.fixes/kvm-fix-iommu-map-unmap-to-handle-memory-slot-moves.patch
