iscsi_ibft: Define missing 'ibft_addr' (bsc#932047).

--- a/series.conf
+++ b/series.conf
@@ -18577,6 +18577,7 @@
 	patches.drivers/qla4xxx-Disable-INTx-interrupt-for-ISP82XX.patch
 	patches.drivers/qla4xxx-v5.03.00.00.11.4-k0.patch
 	patches.suse/firmware-iBFT-firmware-is-also-supported-on-EFI-mach.patch
+	patches.suse/iscsi_ibft-Define-missing-ibft_addr.patch
 
 	########################################################
 	# PCMCIA
