supported.conf: enable sch_mqprio (bsc#932882)

--- a/supported.conf
+++ b/supported.conf
@@ -2225,6 +2225,7 @@
 		net/sched/sch_hfsc
 		net/sched/sch_htb
 		net/sched/sch_ingress
+		net/sched/sch_mqprio
 		net/sched/sch_multiq
 		net/sched/sch_netem
 		net/sched/sch_prio
