--- a/series.conf
+++ b/series.conf
@@ -15551,6 +15551,8 @@
 	patches.arch/0005-powerpc-perf-Add-support-for-SIER.patch
 	patches.arch/0006-powerpc-perf-Power8-PMU-support.patch
 
+	patches.fixes/kernel-add-panic_on_warn.patch
+
 	########################################################
 	# KVM patches
 	########################################################
