NFS: never queue requests with rq_cong set on the sending queue (bsc#932458).

--- a/series.conf
+++ b/series.conf
@@ -5166,6 +5166,7 @@
 	patches.fixes/0002-nfs-fix-inverted-test-for-delegation-in-nfs4_reclaim.patch
 	patches.fixes/0001-NFSv4-nfs4_open_done-first-must-check-that-GETATTR-d.patch
 	patches.fixes/0001-SUNRPC-Fix-the-execution-time-statistics-in-the-face.patch
+	patches.fixes/NFS-never-queue-requests-with-rq_cong-set
 
 	patches.fixes/guarantee_unique_inodes_in_proc.patch
 	patches.fixes/isofs-Fix-infinite-looping-over-CE-entries.patch
