--- a/series.conf
+++ b/series.conf
@@ -2101,6 +2101,7 @@
 	patches.fixes/block-serialize-round-stats.diff
 	patches.fixes/block-Fix-dev_t-minor-allocation-lifetime.patch
 	patches.fixes/genhd-fix-leftover-might_sleep-in-blk_free_devt.patch
+	patches.fixes/block-Discard-bios-do-not-have-data.patch
 
 	########################################################
 	# Networking, IPv6
