- sched: fix __sched_setscheduler() vs load balancing race (bnc#921430)

--- a/series.conf
+++ b/series.conf
@@ -449,6 +449,9 @@
 	# bnc#930786
 	patches.fixes/sched-Fix-potential-near-infinite-distribute_cfs_runtime-loop.patch
 
+	# bnc#921430
+	patches.fixes/sched-Fix-__sched_setscheduler-vs-load-balancing-race.patch
+
 	########################################################
 	# futex
 	########################################################
