Ext4: handle SEEK_HOLE/SEEK_DATA generically (bsc#934944).

--- a/series.conf
+++ b/series.conf
@@ -2321,6 +2321,7 @@
 	patches.fixes/jbd-Issue-cache-flush-after-checkpointing.patch
 	patches.suse/ext3-increase-reservation-window.patch
 	patches.fixes/ext4-race-condition-protection-for-ext4_convert_unwr.patch
+	patches.fixes/ext4-handle-SEEK_HOLE-SEEK_DATA-generically.patch
 
 	# Improves latency of a parallel read request during heavy IO.
 	patches.fixes/mm-jbd-Add-fixed-tracepoints.patch
