--- a/series.conf
+++ b/series.conf
@@ -5180,6 +5180,7 @@
 	patches.fixes/udf-Verify-symlink-size-before-loading-it.patch
 	patches.fixes/udf-Check-path-length-when-reading-symlink.patch
 	patches.fixes/udf-Check-component-length-before-reading-it.patch
+	patches.fixes/udf-Remove-repeated-loads-blocksize.patch
 	patches.fixes/vfs-fix-race-between-fcntl-and-file-f_flags-checks.patch
 
 	########################################################
