kvm: irqchip: Break up high order allocations of kvm_irq_routing_table (bnc#926953).

--- a/series.conf
+++ b/series.conf
@@ -17296,6 +17296,9 @@
 	# bsc#931538 - [HP HPS Bug] SLES11 sp4 beta 4 Bl465 gen 8 -Kernel panic in beiscsi after OS install
 	patches.fixes/iommu-amd-handle-integer-overflow-in-dma_ops_area_alloc
 
+	# bsc#926953 - L3: qemu-kvm: page allocation failure: order:4, mode:0xd0
+	patches.fixes/kvm-irqchip-break-up-high-order-allocations-of-kvm_irq_routing_table
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
