libata: prevent HSM state change race between ISR and PIO (bsc#923245).

--- a/series.conf
+++ b/series.conf
@@ -17299,6 +17299,9 @@
 	# bsc#926953 - L3: qemu-kvm: page allocation failure: order:4, mode:0xd0
 	patches.fixes/kvm-irqchip-break-up-high-order-allocations-of-kvm_irq_routing_table
 
+	# bsc#923245 - Kernel BUG at libata-sff.c:ata_sff_hsm_move+330
+	patches.fixes/libata-prevent-HSM-state-change-race-between-ISR-and-PIO
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
