--- a/series.conf
+++ b/series.conf
@@ -2040,6 +2040,7 @@
 	patches.fixes/ipv6-fix-net-reference-leak-in-IPv6-conntrack-reasse.patch
 	patches.fixes/udp-only-allow-UFO-for-packets-from-SOCK_DGRAM-socke.patch
 	patches.fixes/net-ipv6-fib-don-t-sleep-inside-atomic-lock.patch
+	patches.fixes/net-fib6-fib6_commit_metrics-fix-potential-NULL-poin.patch
 
 	########################################################
 	# tipc
