--- a/series.conf
+++ b/series.conf
@@ -2039,6 +2039,7 @@
 	patches.fixes/nf_conntrack-avoid-reference-leak-in-__ipv6_conntrac.patch
 	patches.fixes/ipv6-fix-net-reference-leak-in-IPv6-conntrack-reasse.patch
 	patches.fixes/udp-only-allow-UFO-for-packets-from-SOCK_DGRAM-socke.patch
+	patches.fixes/net-ipv6-fib-don-t-sleep-inside-atomic-lock.patch
 
 	########################################################
 	# tipc
