--- a/series.conf
+++ b/series.conf
@@ -17314,6 +17314,7 @@
 	# 927355 - L3: BUG_ON(irq_has_action(entry->irq + i)) while unloading mlx4_core driver
 	patches.fixes/0001-net-mlx4_core-Don-t-disable-SRIOV-if-there-are-activ.patch
 	patches.fixes/0002-pci-add-sriov-helper-function-to-determine-if-vfs-are-assigned-to-guest
+	patches.fixes/0003-ixgbe-use-pci_vfs_assigned-instead-of-ixgbe_vfs_are_assigned
 
 	########################################################
 	# You'd better have a good reason for adding a patch
