mlx4: Check for assigned VFs before disabling SR-IOV (bsc#927355).

--- a/series.conf
+++ b/series.conf
@@ -17315,6 +17315,7 @@
 	patches.fixes/0001-net-mlx4_core-Don-t-disable-SRIOV-if-there-are-activ.patch
 	patches.fixes/0002-pci-add-sriov-helper-function-to-determine-if-vfs-are-assigned-to-guest
 	patches.fixes/0003-ixgbe-use-pci_vfs_assigned-instead-of-ixgbe_vfs_are_assigned
+	patches.fixes/0004-net-mlx4-check-for-assigned-vfs.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
