--- a/series.conf
+++ b/series.conf
@@ -17311,6 +17311,9 @@
 	# bsc#923245 - Kernel BUG at libata-sff.c:ata_sff_hsm_move+330
 	patches.fixes/libata-prevent-HSM-state-change-race-between-ISR-and-PIO
 
+	# 927355 - L3: BUG_ON(irq_has_action(entry->irq + i)) while unloading mlx4_core driver
+	patches.fixes/0001-net-mlx4_core-Don-t-disable-SRIOV-if-there-are-activ.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
