pci: Add SRIOV helper function to determine if VFs are assigned to guest (bsc#927355). Refreshed patches.xen/xen3-patch-2.6.31 due to conflicts with this patch.

--- a/series.conf
+++ b/series.conf
@@ -17313,6 +17313,7 @@
 
 	# 927355 - L3: BUG_ON(irq_has_action(entry->irq + i)) while unloading mlx4_core driver
 	patches.fixes/0001-net-mlx4_core-Don-t-disable-SRIOV-if-there-are-activ.patch
+	patches.fixes/0002-pci-add-sriov-helper-function-to-determine-if-vfs-are-assigned-to-guest
 
 	########################################################
 	# You'd better have a good reason for adding a patch
