iommu/amd: Fix memory leak in free_pagetable (bsc#935866).

--- a/series.conf
+++ b/series.conf
@@ -17311,6 +17311,9 @@
 	# bsc#923245 - Kernel BUG at libata-sff.c:ata_sff_hsm_move+330
 	patches.fixes/libata-prevent-HSM-state-change-race-between-ISR-and-PIO
 
+	#935866 - Fix page table leaks in AMD IOMMU driver
+	patches.fixes/0001-iommu-amd-fix-memory-leak-in-free_pagetable
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
