iommu/amd: Handle large pages correctly in free_pagetable (bsc#935866).

--- a/series.conf
+++ b/series.conf
@@ -17313,6 +17313,7 @@
 
 	#935866 - Fix page table leaks in AMD IOMMU driver
 	patches.fixes/0001-iommu-amd-fix-memory-leak-in-free_pagetable
+	patches.fixes/0002-iommu-amd-handle-large-pages-correctly-in-free_pagetable
 
 	########################################################
 	# You'd better have a good reason for adding a patch
