qlcnic: Fix NULL pointer dereference in qlcnic_hwmon_show_temp() (bsc#936095).

--- a/series.conf
+++ b/series.conf
@@ -17491,6 +17491,9 @@
 	patches.fixes/net-llc-use-correct-size-for-sysctl-timeout-entries.patch
 	patches.fixes/ipv6-don-t-reduce-hop-limit-for-an-interface.patch
 
+	# bsc#936095
+	patches.drivers/qlcnic-0001-qlcnic-Fix-NULL-pointer-dereference-in-qlcnic_hwmon.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
