--- a/series.conf
+++ b/series.conf
@@ -20411,6 +20411,7 @@
 	patches.apparmor/apparmor-compatibility-patch-for-v5-network-control
 	patches.apparmor/apparmor-compatibility-patch-for-v5-interface
 	patches.apparmor/apparmor-allow-dfa-backward-compatibility-with-broken-userspace
+	patches.fixes/apparmor-fix-file_permission-if-profile-is-updated.patch
 
 	########################################################
 	# KDB
