vmxnet3: Fix memory leaks in rx path (fwd) (bug#936423).

--- a/series.conf
+++ b/series.conf
@@ -12771,6 +12771,7 @@
 	patches.fixes/net-llc-use-correct-size-for-sysctl-timeout-entries.patch
 	patches.fixes/ipv6-don-t-reduce-hop-limit-for-an-interface.patch
 	patches.drivers/vmxnet3-Register-shutdown-handler-for-device-fwd.patch
+	patches.drivers/vmxnet3-Fix-memory-leaks-in-rx-path-fwd.patch
 
 	########################################################
 	# Wireless Networking
