vmxnet3: Changes for vmxnet3 adapter version 2 (fwd) (bug#936423).

--- a/series.conf
+++ b/series.conf
@@ -12772,6 +12772,7 @@
 	patches.fixes/ipv6-don-t-reduce-hop-limit-for-an-interface.patch
 	patches.drivers/vmxnet3-Register-shutdown-handler-for-device-fwd.patch
 	patches.drivers/vmxnet3-Fix-memory-leaks-in-rx-path-fwd.patch
+	patches.drivers/vmxnet3-Changes-for-vmxnet3-adapter-version-2-fwd.patch
 
 	########################################################
 	# Wireless Networking
