--- a/series.conf
+++ b/series.conf
@@ -12770,6 +12770,7 @@
 	patches.fixes/ipv4-missing-sk_nulls_node_init-in-ping_unhash.patch
 	patches.fixes/net-llc-use-correct-size-for-sysctl-timeout-entries.patch
 	patches.fixes/ipv6-don-t-reduce-hop-limit-for-an-interface.patch
+	patches.drivers/vmxnet3-Register-shutdown-handler-for-device-fwd.patch
 
 	########################################################
 	# Wireless Networking
