st: null pointer dereference panic caused by use after kref_put by st_open (bsc#936875).

--- a/series.conf
+++ b/series.conf
@@ -6306,6 +6306,7 @@
 	patches.fixes/scsi_dh_alua-disable-ALUA-handling-for-non-disk-devi.patch
 	patches.fixes/scsi_dh_alua-add-missing-hunk-in-alua_set_params.patch
 	patches.fixes/sd-medium-access-timeout-counter-fails-to-reset.patch
+	patches.fixes/0001-st-null-pointer-deref-panic.patch
 
 	patches.drivers/aix94xx-Use-angle-brackets-for-system-includes.patch
 	patches.drivers/osd-Kconfig-remove-wrong-FIXME.patch
