--- a/series.conf
+++ b/series.conf
@@ -2340,6 +2340,7 @@
 	patches.fixes/mm-jbd-Refine-commit-writeout-logic.patch
 
 	patches.fixes/jbd-clear-revoked-flag-on-buffers-before-a-new-trans.patch
+	patches.fixes/ext3-Fix-data-corruption-in-inodes-with-journalled-d.patch
 
 	########################################################
 	# btrfs
