zcrypt: Fixed reset and interrupt handling of AP queues (bnc#936925, LTC#126491).

--- a/series.conf
+++ b/series.conf
@@ -15964,6 +15964,8 @@
 	patches.arch/s390-24-03-3215-tty-hang.patch
 	patches.arch/s390-24-04-sclp-tty-refcount.patch
 
+	patches.arch/s390-sles11sp3-29-01-zcrypt-reset-handling.patch
+
 	# bnc#851101
 	patches.fixes/kvm-perform-an-invalid-memslot-step-for-gpa-base-change.patch
 	patches.fixes/kvm-fix-iommu-map-unmap-to-handle-memory-slot-moves.patch
