--- a/series.conf
+++ b/series.conf
@@ -12775,6 +12775,7 @@
 	patches.drivers/vmxnet3-Register-shutdown-handler-for-device-fwd.patch
 	patches.drivers/vmxnet3-Fix-memory-leaks-in-rx-path-fwd.patch
 	patches.drivers/vmxnet3-Changes-for-vmxnet3-adapter-version-2-fwd.patch
+	patches.drivers/vmxnet3-Bump-up-driver-version-number.patch
 	patches.fixes/udp-fix-behavior-of-wrong-checksums.patch
 
 	########################################################
