fanotify: Fix deadlock with permission events (bsc#935053).

--- a/series.conf
+++ b/series.conf
@@ -5208,6 +5208,8 @@
 	patches.fixes/udf-Check-length-of-extended-attributes-and-allocati.patch
 	patches.fixes/vfs-fix-race-between-fcntl-and-file-f_flags-checks.patch
 
+	patches.fixes/fanotify-fix-deadlock-during-thread-exit.patch
+
 	########################################################
 	# Swap-over-NFS
 	########################################################
