x86/mm: Improve AMD Bulldozer ASLR workaround (bsc#937032).

--- a/series.conf
+++ b/series.conf
@@ -5101,6 +5101,9 @@
 	# bnc#852558
 	patches.fixes/aacraid-missing-capable-check-in-compat-ioctl.patch
 
+	# bsc#937032 - VUL-0: kernel: AMD Bulldozer Linux ASLR weakness: Reducing entropy by 87.5%
+	patches.fixes/x86-mm-improve-amd-bulldozer-aslr-workaround
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
