usb: core: Fix USB 3.0 devices lost in NOTATTACHED state after a hub port reset (bnc#937641).

--- a/series.conf
+++ b/series.conf
@@ -13924,6 +13924,8 @@
 	patches.suse/0001-Do-not-switch-internal-CDC-device-on-IBM-NeXtScale-n.patch
 	patches.drivers/0001-uvc-work-on-XHCI-controllers-without-ring-expansion.patch
 
+	patches.drivers/0001-usb-core-Fix-USB-3.0-devices-lost-in-NOTATTACHED-sta.patch
+
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
 
