fork: reset mm->pinned_vm (bnc#937855).

--- a/series.conf
+++ b/series.conf
@@ -15437,6 +15437,7 @@
 	patches.suse/intel-perf-event-0030-x86-intel-output-microcode-revision-in-proc-cpuinfo.patch
 	patches.suse/intel-perf-event-0031-mm-distinguish-between-mlocked-and-pinned-pages.patch
 	patches.fixes/IB-core-Fix-mismatch-between-locked-and-pinned-pages.patch
+	patches.fixes/fork-reset-mm-pinned_vm.patch
 	# 032 == perf-do-not-set-task_ctx-pointer-in-cpuctx.patch
 	patches.suse/intel-perf-event-0033-perf-don-t-use-enospc-for-out-of-pmu-resources.patch
 	patches.suse/intel-perf-event-0034-perf-x86-enable-raw-event-access-to-intel-offcore-events.patch
