--- a/series.conf
+++ b/series.conf
@@ -931,6 +931,9 @@
 	#bsc#928970
 	patches.arch/pseries-Correct-cpu-affinity-for-dlpar-added-cpus.patch
 	
+	#bsc#935055
+	patches.drivers/0001-ibmveth-change_rx_buffer_default_allocation_for_CMO.patch
+
 	########################################################
 	# S/390
 	########################################################
