ibmveth: Add support for TSO (bsc#935055).

--- a/series.conf
+++ b/series.conf
@@ -933,6 +933,7 @@
 	
 	#bsc#935055
 	patches.drivers/0001-ibmveth-change_rx_buffer_default_allocation_for_CMO.patch
+	patches.drivers/0002-ibmveth-Add_support_for_TSO.patch
 
 	########################################################
 	# S/390
