ibmveth: Add GRO support (bsc#935055).

--- a/series.conf
+++ b/series.conf
@@ -934,6 +934,7 @@
 	#bsc#935055
 	patches.drivers/0001-ibmveth-change_rx_buffer_default_allocation_for_CMO.patch
 	patches.drivers/0002-ibmveth-Add_support_for_TSO.patch
+	patches.drivers/0003-ibmveth-GRO_support.patch
 
 	########################################################
 	# S/390
