ibmveth: Add support for Large Receive Offload (bsc#935055).

--- a/series.conf
+++ b/series.conf
@@ -935,6 +935,7 @@
 	patches.drivers/0001-ibmveth-change_rx_buffer_default_allocation_for_CMO.patch
 	patches.drivers/0002-ibmveth-Add_support_for_TSO.patch
 	patches.drivers/0003-ibmveth-GRO_support.patch
+	patches.drivers/0004-ibmveth-Add_support_for_Large_Receive_Offload.patch
 
 	########################################################
 	# S/390
