net: Fix "ip rule delete table 256" (bsc#873385).

--- a/series.conf
+++ b/series.conf
@@ -2049,6 +2049,7 @@
 	patches.fixes/net-ipv6-fib-don-t-sleep-inside-atomic-lock.patch
 	patches.fixes/net-fib6-fib6_commit_metrics-fix-potential-NULL-poin.patch
 	patches.fixes/x86-bpf_jit-fix-compilation-of-large-bpf-programs
+	patches.fixes/net-Fix-ip-rule-delete-table-256.patch
 
 	########################################################
 	# tipc
