xfs: Skip dirty pages in ->releasepage (bnc#912738, bnc#915183).

--- a/series.conf
+++ b/series.conf
@@ -4256,6 +4256,7 @@
 
 	patches.fixes/xfs-prevent-deadlock-trying-to-cover-an-active-log.patch
 	patches.fixes/xfs-xfs_alloc_fix_minleft-can-underflow-near-ENOSPC.patch
+	patches.suse/xfs-skip-dirty-pages-in-releasepage.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
