mm: restrict access to slab files under procfs and sysfs (bnc#936077).

--- a/series.conf
+++ b/series.conf
@@ -1779,6 +1779,8 @@
 	patches.fixes/pipe-fix-iov-overrun-for-failed-atomic-copy.patch
 	patches.fixes/vfs-read-file_handle-only-once-in-handle_to_path.patch
 
+	patches.fixes/mm-restrict-access-to-slab-files-under-procfs-and-sy.patch
+
 	########################################################
 	# IPC patches
 	########################################################
