nfsd: support disabling 64bit dir cookies (bnc#937503).

--- a/series.conf
+++ b/series.conf
@@ -2295,6 +2295,7 @@
 	patches.fixes/0005-ext3-return-32-64-bit-dir-name-hash-according-to-usa.patch
 
 	patches.fixes/nfsd-decode.fix
+	patches.fixes/nfsd-cookie-management.patch
 
 	########################################################
 	# lockd
