Fix missing crypto allocation (bnc#937402).

--- a/series.conf
+++ b/series.conf
@@ -2322,6 +2322,7 @@
 	patches.fixes/cifs-delay-super-block-destruction-until-all-cifsFil.patch
 	patches.fixes/cifs-fix-use-after-free-bug-in-find_writable_file.patch
 	patches.fixes/limit-allocation-of-crypto-mechanisms-to-dialect.patch
+	patches.fixes/limit-allocation-of-crypto-mechanisms-to-dialect-fix.patch
 	patches.fixes/cifs-client-should-ignore-non-zero-challengelenght.patch
 
 	########################################################
