- patches.fixes/xfs-fix-check-logbsize-is-integer-multiple-of-lsunit.patch   this patch is not yet in upstream kernel, since the maintainer doesn't   seem to be really interested in the problem. After discussion with   Jan Kara, we decided to take it to our kernel though.   (bnc#925705)

--- a/series.conf
+++ b/series.conf
@@ -17357,6 +17357,9 @@
 	# bsc#937032 - VUL-0: kernel: AMD Bulldozer Linux ASLR weakness: Reducing entropy by 87.5%
 	patches.fixes/x86-mm-improve-amd-bulldozer-aslr-workaround
 
+	# bsc#925705
+	patches.fixes/xfs-fix-check-logbsize-is-integer-multiple-of-lsunit.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
