megaraid_sas: Use correct reset sequence in adp_reset() (bsc#938485).

--- a/series.conf
+++ b/series.conf
@@ -5453,6 +5453,7 @@
 	patches.drivers/megaraid_sas-Disable-controller-reset-for-ppc.patch
 	patches.drivers/megaraid_sas-Disable-fastpath-writes-for-non-RAID0.patch
 	patches.drivers/megaraid_sas-Update-threshold-based-reply-post-host-.patch
+	patches.drivers/megaraid_sas-Use-correct-reset-sequence-in-adp_reset.patch
 
 	patches.fixes/scsi-ses-crash-on-lun0
 	patches.suse/scsi-error-test-unit-ready-timeout
