--- a/series.conf
+++ b/series.conf
@@ -15230,6 +15230,7 @@
 
 	patches.fixes/0001-md-don-t-give-up-looking-for-spares-on-first-failure.patch
 	patches.fixes/0001-md-fix-safe_mode-buglet.patch
+	patches.fixes/0001-md-use-kzalloc-when-bitmap-is-disabled.patch
 
 	##########################################################
 	#
