NFSv4: Minor cleanups for nfs4_handle_exception and nfs4_async_handle_error (bsc#939910).

--- a/series.conf
+++ b/series.conf
@@ -2303,6 +2303,7 @@
 
 	patches.fixes/nfsd-decode.fix
 	patches.fixes/nfsd-cookie-management.patch
+	patches.fixes/0001-NFSv4-Minor-cleanups-for-nfs4_handle_exception-and-n.patch
 
 	########################################################
 	# lockd
