perf, nmi: Fix unknown NMI warning (bsc#929142).

--- a/series.conf
+++ b/series.conf
@@ -15605,6 +15605,7 @@
 	patches.fixes/kernel-add-panic_on_warn.patch
 
 	patches.fixes/perf-x86-intel-move-nmi-clearing-to-end-of-pmi-handler.patch
+	patches.fixes/perf-nmi-fix-unknown-nmi-warning.patch
 
 
 	########################################################
