perf/x86/intel: Move NMI clearing to end of PMI handler (bsc#929142).

--- a/series.conf
+++ b/series.conf
@@ -15604,6 +15604,9 @@
 
 	patches.fixes/kernel-add-panic_on_warn.patch
 
+	patches.fixes/perf-x86-intel-move-nmi-clearing-to-end-of-pmi-handler.patch
+
+
 	########################################################
 	# KVM patches
 	########################################################
