--- a/series.conf
+++ b/series.conf
@@ -5351,6 +5351,8 @@
 	patches.fixes/PCI-PM-restore-the-original-behavior-of-pci_set_powe
 	patches.fixes/x86-PCI-reduce-severity-of-host-bridge-window-confli.patch
 	patches.fixes/pci-enable-mps-performance-setting-to-properly-handle-bridge-mps
+	patches.fixes/pci-disable-bus-master-on-pci-device-shutdown.patch
+
 
 	########################################################
 	#
