kabi: wrapper include file with __GENKSYMS__ check to avoid kabi change (bsc920110).

--- a/series.conf
+++ b/series.conf
@@ -5355,6 +5355,7 @@
 	patches.fixes/pci-disable-bus-master-unconditionally-in-pci_device_shutdown.patch
 	patches.fixes/pci-don-t-try-to-disable-bus-master-on-disconnected-pci-devices.patch
 	patches.fixes/pci-disable-bus-master-only-on-kexec-reboot.patch
+	patches.kabi/kabi-wrapper-include-file-with-_genksyms__-check-to-avoid-kabi-change.patch
 
 
 	########################################################
