PCI: Don't try to disable Bus Master on disconnected PCI devices (bsc#920110).

--- a/series.conf
+++ b/series.conf
@@ -5353,6 +5353,7 @@
 	patches.fixes/pci-enable-mps-performance-setting-to-properly-handle-bridge-mps
 	patches.fixes/pci-disable-bus-master-on-pci-device-shutdown.patch
 	patches.fixes/pci-disable-bus-master-unconditionally-in-pci_device_shutdown.patch
+	patches.fixes/pci-don-t-try-to-disable-bus-master-on-disconnected-pci-devices.patch
 
 
 	########################################################
