PCI: Disable Bus Master unconditionally in pci_device_shutdown() (bsc#920110).

--- a/series.conf
+++ b/series.conf
@@ -5352,6 +5352,7 @@
 	patches.fixes/x86-PCI-reduce-severity-of-host-bridge-window-confli.patch
 	patches.fixes/pci-enable-mps-performance-setting-to-properly-handle-bridge-mps
 	patches.fixes/pci-disable-bus-master-on-pci-device-shutdown.patch
+	patches.fixes/pci-disable-bus-master-unconditionally-in-pci_device_shutdown.patch
 
 
 	########################################################
