--- a/series.conf
+++ b/series.conf
@@ -5354,6 +5354,7 @@
 	patches.fixes/pci-disable-bus-master-on-pci-device-shutdown.patch
 	patches.fixes/pci-disable-bus-master-unconditionally-in-pci_device_shutdown.patch
 	patches.fixes/pci-don-t-try-to-disable-bus-master-on-disconnected-pci-devices.patch
+	patches.fixes/pci-disable-bus-master-only-on-kexec-reboot.patch
 
 
 	########################################################
