hrtimer: prevent timer interrupt DoS (bnc#886785).

--- a/series.conf
+++ b/series.conf
@@ -452,6 +452,9 @@
 	# bnc#921430
 	patches.fixes/sched-Fix-__sched_setscheduler-vs-load-balancing-race.patch
 
+	# bnc#886785
+	patches.fixes/hrtimer-Prevent-timer-interrupt-DoS.patch
+
 	########################################################
 	# futex
 	########################################################
