ibmveth: add support for TSO6.

--- a/series.conf
+++ b/series.conf
@@ -937,6 +937,9 @@
 	patches.drivers/0003-ibmveth-GRO_support.patch
 	patches.drivers/0004-ibmveth-Add_support_for_Large_Receive_Offload.patch
 
+	#fate#319350
+	patches.drivers/ibmveth-add-support-for-TSO6.patch
+
 	########################################################
 	# S/390
 	########################################################
