hv_storvsc: use small sg_tablesize on x86 (bnc#937256).

--- a/series.conf
+++ b/series.conf
@@ -22191,6 +22191,7 @@
 	patches.suse/suse-hv-bind-hv_mouse-to-hid-hyperv.patch
 	patches.suse/suse-hv-HV_DRV_VERSION.patch
 	patches.suse/suse-hv-module-unload.patch
+	patches.suse/suse-hv-storvsc-sg_tablesize.patch
 
 
 	########################################################
