--- a/series.conf
+++ b/series.conf
@@ -2642,6 +2642,8 @@
 	# bnc#792674
 	patches.drivers/ata-Fix-DVD-not-dectected-at-some-Haswell-platforms.patch
 
+	patches.fixes/sg_start_req-make-sure-that-there-s-not-too-many-elements-in-iovec.patch
+
 	########################################################
 	# DRM/Video, AGP, graphics related stuff
 	########################################################
