- mm: exclude reserved pages from dirtyable memory 32b fix   (bnc#940017, bnc#949298). - Refresh   patches.suse/mm-page-writeback.c-do-not-count-anon-pages-as-dirtyable-memory.patch.

--- a/series.conf
+++ b/series.conf
@@ -1596,6 +1596,7 @@
 
 	# bnc931015
 	patches.fixes/mm-exclude-reserved-pages-from-dirtyable-memory.patch
+	patches.fixes/mm-exclude-reserved-pages-from-dirtyable-memory-fix.patch
 	patches.fixes/mm-fix-calculation-of-dirtyable-memory.patch
 	patches.fixes/mm-page-writeback.c-fix-dirty_balance_reserve-subtra.patch
 	
