exec: kill the unnecessary mm->def_flags setting in load_elf_binary() (prctl support for disabling THP (fate#317831,bnc#891116)).

--- a/series.conf
+++ b/series.conf
@@ -21087,6 +21087,7 @@
 	patches.suse/mm-revert-thp-make-MADV_HUGEPAGE-check-for-mm-def_flags.patch
 	patches.suse/mm-thp-add-VM_INIT_DEF_MASK-and-PRCTL_THP_DISABLE.patch
 	patches.suse/mm-thp-Add-dummy-definition-for-VM_NOHUGEPAGE-where-necessary.patch
+	patches.suse/exec-kill-the-unnecessary-mm-def_flags-setting-in-load_elf_binary.patch
 
 	# bnc#754583
 	patches.arch/kvm-emulator-drop-rpl-check-from-linearize-function.patch
