s390/dasd: fix kernel panic when alias is set offline (bnc#940966, LTC#128595).

--- a/series.conf
+++ b/series.conf
@@ -1305,6 +1305,8 @@
 
 	patches.arch/s390-sles11sp4-04-01-crypto-ghash-concurrency-fix.patch
 
+	patches.arch/s390-sles11sp4-07-01-dasd-alias-offline-panic.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
