mm: thp: khugepaged: add policy for finding target node (VM Functionality, bnc#931620).

--- a/series.conf
+++ b/series.conf
@@ -1943,6 +1943,7 @@
 	patches.suse/mm-mempolicy-remove-duplicate-code.patch
 	patches.suse/mm-thp-allocate-transparent-hugepages-on-local-node.patch
 	patches.suse/mm-mempolicy.c-merge-alloc_hugepage_vma-to-alloc_pages_vma.patch
+	patches.suse/mm-thp-khugepaged-add-policy-for-finding-target-node.patch
 
 	########################################################
 	# IPC patches
