--- a/series.conf
+++ b/series.conf
@@ -1942,6 +1942,7 @@
 	# Allocate THP on local/preferred node only, bnc#931620
 	patches.suse/mm-mempolicy-remove-duplicate-code.patch
 	patches.suse/mm-thp-allocate-transparent-hugepages-on-local-node.patch
+	patches.suse/mm-mempolicy.c-merge-alloc_hugepage_vma-to-alloc_pages_vma.patch
 
 	########################################################
 	# IPC patches
