mm/thp: allocate transparent hugepages on local node (VM Performance, bnc#931620).

--- a/series.conf
+++ b/series.conf
@@ -1941,6 +1941,7 @@
 
 	# Allocate THP on local/preferred node only, bnc#931620
 	patches.suse/mm-mempolicy-remove-duplicate-code.patch
+	patches.suse/mm-thp-allocate-transparent-hugepages-on-local-node.patch
 
 	########################################################
 	# IPC patches
