mm, thp: respect MPOL_PREFERRED policy with non-local node (VM Performance, bnc#931620).

--- a/series.conf
+++ b/series.conf
@@ -1947,6 +1947,7 @@
 	patches.suse/mm-thp-only-collapse-hugepages-to-nodes-with-affinity-for-zone_reclaim_mode.patch
 	patches.suse/mm-thp-don-t-hold-mmap_sem-in-khugepaged-when-allocating-thp.patch
 	patches.suse/mm-thp-really-limit-transparent-hugepage-allocation-to-local-node.patch
+	patches.fixes/mm-thp-respect-mpol_preferred-policy-with-non-local-node.patch
 
 	########################################################
 	# IPC patches
