mm, mempolicy: remove duplicate code (VM Functionality, bnc#931620).

--- a/series.conf
+++ b/series.conf
@@ -1939,6 +1939,9 @@
 
 	patches.fixes/mm-restrict-access-to-slab-files-under-procfs-and-sy.patch
 
+	# Allocate THP on local/preferred node only, bnc#931620
+	patches.suse/mm-mempolicy-remove-duplicate-code.patch
+
 	########################################################
 	# IPC patches
 	########################################################
