mm, thp: only collapse hugepages to nodes with affinity for zone_reclaim_mode (VM Functionality, bnc#931620).

--- a/series.conf
+++ b/series.conf
@@ -1944,6 +1944,7 @@
 	patches.suse/mm-thp-allocate-transparent-hugepages-on-local-node.patch
 	patches.suse/mm-mempolicy.c-merge-alloc_hugepage_vma-to-alloc_pages_vma.patch
 	patches.suse/mm-thp-khugepaged-add-policy-for-finding-target-node.patch
+	patches.suse/mm-thp-only-collapse-hugepages-to-nodes-with-affinity-for-zone_reclaim_mode.patch
 
 	########################################################
 	# IPC patches
