--- a/series.conf
+++ b/series.conf
@@ -1945,6 +1945,7 @@
 	patches.suse/mm-mempolicy.c-merge-alloc_hugepage_vma-to-alloc_pages_vma.patch
 	patches.suse/mm-thp-khugepaged-add-policy-for-finding-target-node.patch
 	patches.suse/mm-thp-only-collapse-hugepages-to-nodes-with-affinity-for-zone_reclaim_mode.patch
+	patches.suse/mm-thp-don-t-hold-mmap_sem-in-khugepaged-when-allocating-thp.patch
 
 	########################################################
 	# IPC patches
