mm, thp: really limit transparent hugepage allocation to local node (VM Performance, bnc#931620).

--- a/series.conf
+++ b/series.conf
@@ -1946,6 +1946,7 @@
 	patches.suse/mm-thp-khugepaged-add-policy-for-finding-target-node.patch
 	patches.suse/mm-thp-only-collapse-hugepages-to-nodes-with-affinity-for-zone_reclaim_mode.patch
 	patches.suse/mm-thp-don-t-hold-mmap_sem-in-khugepaged-when-allocating-thp.patch
+	patches.suse/mm-thp-really-limit-transparent-hugepage-allocation-to-local-node.patch
 
 	########################################################
 	# IPC patches
