[SCSI] vmw_pvscsi: Fix pvscsi_abort() function (bnc#940398 bsc#930934).

--- a/series.conf
+++ b/series.conf
@@ -6909,6 +6909,7 @@
 	patches.suse/aoe-update-internal-version-number-to-81
 	patches.suse/aoe-fix-use-after-free-in-aoedev_by_aoeaddr
 	patches.fixes/sg_start_req-make-sure-that-there-s-not-too-many-elements-in-iovec.patch
+	patches.fixes/SCSI-vmw_pvscsi-Fix-pvscsi_abort-function
 
 	########################################################
 	# DRM/Video, AGP, graphics related stuff
