mm, thp: fix collapsing of hugepages on madvise (VM Functionality).

--- a/series.conf
+++ b/series.conf
@@ -1948,6 +1948,7 @@
 	patches.suse/mm-thp-don-t-hold-mmap_sem-in-khugepaged-when-allocating-thp.patch
 	patches.suse/mm-thp-really-limit-transparent-hugepage-allocation-to-local-node.patch
 	patches.fixes/mm-thp-respect-mpol_preferred-policy-with-non-local-node.patch
+	patches.fixes/mm-thp-fix-collapsing-of-hugepages-on-madvise.patch
 
 	########################################################
 	# IPC patches
