--- a/series.conf
+++ b/series.conf
@@ -3824,6 +3824,7 @@
 	# bnc#942350, fs corruption fixes
 	patches.suse/btrfs-8341-be-aware-of-btree-inode-write-errors-to-avoid-.patch
 	patches.suse/btrfs-8342-deal-with-convert_extent_bit-errors-to-avoid-f.patch
+	patches.suse/btrfs-8343-check-if-previous-transaction-aborted-to-avoid.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
