--- a/series.conf
+++ b/series.conf
@@ -4116,6 +4116,8 @@
 	patches.suse/btrfs-8338-fix-inode-eviction-infinite-loop-after-extent_.patch
 	patches.suse/btrfs-8339-btrfs_release_extent_buffer_page-didn-t-free-p.patch
 	patches.suse/btrfs-8340-fix-race-when-reusing-stale-extent-buffers-tha.patch
+	# bnc#942404, fs corruption fixes
+	patches.suse/btrfs-8341-be-aware-of-btree-inode-write-errors-to-avoid-.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
