--- a/series.conf
+++ b/series.conf
@@ -4118,6 +4118,7 @@
 	patches.suse/btrfs-8340-fix-race-when-reusing-stale-extent-buffers-tha.patch
 	# bnc#942404, fs corruption fixes
 	patches.suse/btrfs-8341-be-aware-of-btree-inode-write-errors-to-avoid-.patch
+	patches.suse/btrfs-8342-deal-with-convert_extent_bit-errors-to-avoid-f.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
