netfilter: nf_conntrack_proto_sctp: minimal multihoming support (bsc#932350).

--- a/series.conf
+++ b/series.conf
@@ -5328,6 +5328,7 @@
 	patches.kabi/kabi-protect-struct-net-from-bnc-877013-changes.patch
 	patches.fixes/netfilter-conntrack-disable-generic-tracking-for-known-protos.patch
 	patches.fixes/netfilter-do-not-drop-packet-on-insert-collision.patch
+	patches.fixes/netfilter-nf_conntrack_proto_sctp-minimal-multihomin.patch
 
 	########################################################
 	# PCI and PCI hotplug
