x86/tsc: Change Fast TSC calibration failed from error to info (bnc#942605).

--- a/series.conf
+++ b/series.conf
@@ -617,6 +617,8 @@
 	# bnc#930284
 	patches.fixes/x86-reboot-Fix-a-warning-message-triggered-by-stop_o.patch
 
+	patches.arch/x86-tsc-Change-Fast-TSC-calibration-failed-from-erro
+
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
 	########################################################
