--- a/series.conf
+++ b/series.conf
@@ -3827,6 +3827,7 @@
 	patches.suse/btrfs-8343-check-if-previous-transaction-aborted-to-avoid.patch
 	# bnc#942688, DIO error path fixes
 	patches.suse/btrfs-8344-fix-put-dio-bio-twice-when-we-submit-dio-bio-f.patch
+	patches.suse/btrfs-8345-fix-memory-corruption-on-failure-to-submit-bio.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
