--- a/series.conf
+++ b/series.conf
@@ -3825,6 +3825,8 @@
 	patches.suse/btrfs-8341-be-aware-of-btree-inode-write-errors-to-avoid-.patch
 	patches.suse/btrfs-8342-deal-with-convert_extent_bit-errors-to-avoid-f.patch
 	patches.suse/btrfs-8343-check-if-previous-transaction-aborted-to-avoid.patch
+	# bnc#942688, DIO error path fixes
+	patches.suse/btrfs-8344-fix-put-dio-bio-twice-when-we-submit-dio-bio-f.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
