--- a/series.conf
+++ b/series.conf
@@ -3828,6 +3828,7 @@
 	# bnc#942688, DIO error path fixes
 	patches.suse/btrfs-8344-fix-put-dio-bio-twice-when-we-submit-dio-bio-f.patch
 	patches.suse/btrfs-8345-fix-memory-corruption-on-failure-to-submit-bio.patch
+	patches.suse/btrfs-8346-fix-hang-when-failing-to-submit-bio-of-directI.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
