kabi: patches.fixes/mm-make-page-pfmemalloc-check-more-robust.patch (bnc#920016).

--- a/series.conf
+++ b/series.conf
@@ -5265,6 +5265,7 @@
 	patches.fixes/mm-swap-mark-pages-writeback-before-dio.patch
 	patches.fixes/mm-vmscan-prevent-kswapd-livelock-due-to-pfmemalloc-throttled-process-being-killed.patch
 	patches.fixes/mm-make-page-pfmemalloc-check-more-robust.patch
+	patches.kabi/mm-make-page-pfmemalloc-check-more-robust-kabi.patch
 
 	# SUNRPC stuff that conflicts with SoN patches.
 
