--- a/series.conf
+++ b/series.conf
@@ -17393,6 +17393,9 @@
 	# bsc#925705
 	patches.fixes/xfs-fix-check-logbsize-is-integer-multiple-of-lsunit.patch
 
+        # bsc#923002 ib/iser update
+        patches.drivers/ib-iser-move-informational-messages-from-error-to-info-level
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
