IB/iser: Add Discovery support (bsc#923002).

--- a/series.conf
+++ b/series.conf
@@ -17397,6 +17397,7 @@
         patches.drivers/ib-iser-move-informational-messages-from-error-to-info-level
         patches.drivers/scsi_transport_iscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
         patches.drivers/libiscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
+        patches.drivers/ib-iser-add-discovery-support
 
 	########################################################
 	# You'd better have a good reason for adding a patch
