SCSI: kabi: allow iscsi disocvery session support (bsc#923002).

--- a/series.conf
+++ b/series.conf
@@ -17398,6 +17398,7 @@
         patches.drivers/scsi_transport_iscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
         patches.drivers/libiscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
         patches.drivers/ib-iser-add-discovery-support
+        patches.suse/scsi-limit-iscsi-kabi-changes-to-discovery-session
 
 	########################################################
 	# You'd better have a good reason for adding a patch
