scsi_transport_iscsi: Exporting new attrs for iscsi session and connection in sysfs (bsc#923002).

--- a/series.conf
+++ b/series.conf
@@ -17395,6 +17395,7 @@
 
         # bsc#923002 ib/iser update
         patches.drivers/ib-iser-move-informational-messages-from-error-to-info-level
+        patches.drivers/scsi_transport_iscsi-exporting-new-attrs-for-iscsi-session-and-connection-in-sysfs
 
 	########################################################
 	# You'd better have a good reason for adding a patch
