r8169: remember WOL preferences on driver load (bsc#942305).

--- a/series.conf
+++ b/series.conf
@@ -12822,6 +12822,7 @@
 	patches.drivers/vmxnet3-Changes-for-vmxnet3-adapter-version-2-fwd.patch
 	patches.drivers/vmxnet3-Bump-up-driver-version-number.patch
 	patches.fixes/udp-fix-behavior-of-wrong-checksums.patch
+	patches.fixes/r8169-remember-WOL-preferences-on-driver-load.patch
 
 	########################################################
 	# Wireless Networking
